force-app/main/default/objects/Codigo_de_Area_Valido__mdt/Codigo_de_Area_Valido__mdt.object-meta.xml
<CustomObject>
    <label>Código de Área Valido</label>
    <pluralLabel>Códigos de Área Validos</pluralLabel>
</CustomObject>