force-app/main/default/objects/Codigo_de_Area_Valido__mdt/fields/Caracteristica__c.field-meta.xml
<CustomField>
    <fullName>Caracteristica__c</fullName>
    <label>Característica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>