force-app/main/default/objects/Codigo_de_Area_Valido__mdt/fields/Codigo_Pais__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Pais__c</fullName>
    <label>Código Pais</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>